--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-
+  cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.10
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
 
