--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - lib/assets/icons/
     - lib/assets/avatars/
 
   # An image asset can refer to one or more resolution-specific "variants", see
